Remove jlink because of missing algorithms